<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.dllewellyn.encryption_lab.EncryptionLabViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context=".LocationLocationLocationFragment">

        <TextView
                android:id="@+id/typeOfEncryption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/what_type_of_encryption_key_do_you_want_to_use"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
                android:id="@+id/passwordOrKeystore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@={viewModel.passwordOrKeystore}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/typeOfEncryption">

            <RadioButton
                    android:id="@+id/keystoreEncryption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_keystore_for_encryption" />

            <RadioButton
                    android:id="@+id/passwordEncryption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_password_for_encryption" />
        </RadioGroup>

        <TextView
                android:id="@+id/spinnerTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_the_type_of_storage_you_want_to_create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordOrKeystore" />

        <Spinner
                android:id="@+id/createTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerTitle" />


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fileName"
                style="@style/AppTheme.EditTextTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/file_name"
                android:paddingTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createTypeSpinner">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.fileName}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                style="@style/AppTheme.EditTextTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/encryption_password"
                android:paddingTop="16dp"
                android:visibility="@{viewModel.passwordFieldVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fileName">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.buttonIsEnabled}"
                android:onClick="@{() -> viewModel.createButtonClicked()}"
                android:text="@string/create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordInput" />

        <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/epoxyDirectoryView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submitButton"
                app:layout_constraintVertical_bias="0.0"
                tools:itemCount="4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>